# system-design-podcast

./: .env.example  .gitignore  README.md  SECURITY.md  TASK.md  pyproject.toml
.github/workflows/: security-check.yml
pipeline/: __init__.py  __main__.py  config.py  llm.py  main.py  quality.py  utils.py
pipeline/steps/: __init__.py  audio.py  diagram.py  podcast.py  research.py  review.py  script.py  voices.py  website.py  youtube.py
scripts/: security-audit.sh
templates/: episode-template.md
website/: episode-template.html  index.html  style.css
website/01-url-shortener/: index.html
website/02-rate-limiter/: index.html
website/03-distributed-cache/: index.html
