[project]
name = "system-design-podcast"
version = "0.1.0"
description = "AI-generated conversational podcast episodes on system design topics"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "click>=8.0",
    "pydub>=0.25",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
